sass/_media.sass
@media (max-width: 1200px)
    .container          
        max-width: 960px
    .hotel-slider
        width: 590px
    .swiper
        &-slide
            &__image
                width: 100%
                height: 100%
                object-fit: cover
@media (max-width: 992px)
    .container .newsletter-wrapper
        max-width: 700px
    .logo
        width: 132px
    .navbar
        &-top
            padding-top: 30px   
            padding-bottom: 30px
        &__search
            margin-left: auto
        &-menu 
            padding-top: 22px
            padding-bottom: 22px
        &__link
            font-size: 12px
            line-height: 15px
    .search
        &__input
            width: 340px
    .breadcrumb
        &-list
            margin-left: 5%
    .hotel
        padding-bottom: 50px
        &-grid
            flex-direction: column
        &-slider
            width: 90%
            margin: auto
        &-info
            width: 90%
            margin: auto
        &__slider
            margin-bottom: 30px
        &-right
            flex-direction: row
            justify-content: space-evenly
    .swiper-container
        margin-bottom: 50px
    .booking
        width: 340px
    .slider
        width: 100%
    .map
        width: 340px
    .reviews
        &-slider__item
            max-width: 580px


@media (max-width: 768px)
    .container
        max-width: 576px
        width: 92%
    .navbar
        &__search, &-menu, &__user
            display: none 
    .menu
        &-button
            width: 16px
            height: 15px
            display: flex
            align-items: center
            justify-content: space-between
            flex-direction: column
            border: none
            background-color: $light
            cursor: pointer
            &__line
                width: 16px
                height: 1.5px
                background-color: $text-color
    .breadcrumb
        &-list
            margin-left: 1%

    .stars
        flex-basis: 50%
        text-align: right

    .hotel
        &-name
            flex-basis: 50%
        &-wrapper
            justify-content: space-between
        &-info
            width: 100%
            &__text
                width: 100%
            &__name
                margin-top: 10px
                margin-bottom: 0
            &__rating
                display: none
            &__offer
                order: -1
                margin-left: 0
        &-description
            margin-top: 0
        &-slider
            width: 100%

    .slider
        height: 350px
    .hotel
        &-right
            flex-direction: column
            min-height: 450px
    .booking
        width: 100%
        margin-bottom: 30px
    .map
        width: 100%
    .newsletter
        &-wrapper
            max-width: 576px
            width: 92%
            flex-direction: column
            align-items: flex-start
    .subscribe
        width: 100%
    .reviews
        &-slider
            &__item
                padding: 0 30px 30px
                &:after, &:before
                    display: none
            &__button
                top: 20px
                left: 50%
                transform: translate(-50%, 0)
                &--prev
                    margin-left: -150px
                //    left: 50%
                //    transform: translate(-50%, 0)
                &--next
                    margin-left: 150px
                //    right: -50%
                //    padding-left: 100px
                //    transform: translate(50%, 0)
        &__title
            font-size: 30px

@media (max-width:  576px)
    .logo
        width: 99px
    .slider
        height: 250px
    .hotel
        &-name
            font-size: 20px
        &__slider
            margin-bottom: 20px
    .newsletter
        padding: 76px 0 83px 0
        &__title
            margin-bottom: 37px

@media (max-width: 480px)
    .hotel
        &-name
            font-size: 16px

